src/App.scss
html,
body {
  height: 100%;
  background: $color-dark-grey;
}

p, span, button {
  font-family: $sans;
}

h1, h2, h3, h5, h6 {
  font-family: $serif;
}

@include lightMode {
  body {
    background: $theme-light-primary;
  }
}

.App {
  text-align: center;
}

.container {
  width: 100%;
  padding-top: $base-spacing * 5;
  z-index: 1;
  @media screen and (min-width: $lap-start) {
    padding-top: $base-spacing * 6;
  }
}

.App-logo {
  animation: App-logo-spin infinite 20s linear;
  height: 40vmin;
}

.App-header {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc($half-spacing + 2vmin);
  color: $color-white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

// Page route transitions

// enter transition 300s, exit 150ms
.fade-appear,
.fade-enter {
  position: absolute;
  top: 100px;
  left: 0;
  right: 0;
  opacity: 0;
  z-index: 1;
}

.fade-appear-active,
.fade-enter.fade-enter-active {
  opacity: 1;
  transition: opacity 3000ms linear 1500ms;
}

.fade-exit {
  opacity: 1;
}

.fade-exit.fade-exit-active {
  opacity: 0;
  transition: opacity 150ms linear;
}

.fade-enter-done {
  margin: auto;
}

